# Eidolist2-cl

./: .gitignore  .gitmodules  README.md
Eidolist2/: CMakeLists.txt  CMakePresets.json  FetchGitLibraries.ps1  eidolist2-main.cpp  eidolist2-main.h  vcpkg.json
Eidolist2/src/: EidolistCore.cpp  EidolistCore.h  SDLTypes.cpp  StdIncludes.h
Eidolist2/src/gui/: MainMenuGui.cpp  MainMenuGui.h  MapLayers.cpp  MapLayers.h  ProjectGui.cpp  ProjectGui.h  ProjectSelectDialog.cpp  ProjectSelectDialog.h
Eidolist2/src/includes/: CommonIncludes.h  GLMIncludes.h  LCFIncludes.h  StdIncludes.h
Eidolist2/src/io/: AssetLoader.cpp  AssetLoader.h  Cache.h  FileHasher.cpp  FileHasher.h  FileIO.h
Eidolist2/src/meta/: WikiData.h
Eidolist2/src/projectdata/: AutotileData.cpp  AutotileData.h  CompareProjectData.cpp  CompareProjectData.h  ListProjectData.cpp  ListProjectData.h  LoadProject.cpp  LoadProject.h  Project.cpp  Project.h  ProjectData.cpp  ProjectData.h  ProjectGui.cpp
Eidolist2/src/projectdata/meta/: WikiData.cpp  WikiData.h
Eidolist2/src/useful/: ImguiStyle.cpp  ImguiStyle.h  LCFTypes.h  MathFun.cpp  MathFun.h  Rect.cpp  Rect.h  SDLFun.cpp  SDLFun.h  SDLTypes.h  TilesetHelper.cpp  TilesetHelper.h  TilesetHelper_Texture.cpp  TilesetHelper_Texture.h  Types.h  WindowArea.cpp  WindowArea.h
